--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage":"http://proj.ruppin.ac.il/igroup20/Mobile/client"
 }
